# docs/swagger.json
@@ -580,11 +580,11 @@
         },
         "/api/v1/orders": {
             "get": {
-                "summary": "Get all orders registers",
-                "description": "Return all orders from the database",
+                "summary": "Obtiene todas las ordenes registradas",
+                "description": "Retorna todas las ordenes almacenadas en la base de datos",
                 "responses": {
                     "200": {
-                        "description": "A list of orders",
+                        "description": "Lista todas las ordenes",
                         "content": {
                             "application/json": {
                                 "schema": {
@@ -597,7 +597,289 @@
                         }
                     },
                     "404": {
-                        "description": "Orders not found"
+                        "description": "Ordenes no encontradas"
+                    },
+                    "500": {
+                        "description": "Error internal server",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "summary": "Crear nueva orden",
+                "description": "Crea una nueva orden y la guarda en la base de datos",
+                "operationId": "addOrder",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/NewOrder"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Order response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Order"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "La orden no pudo ser creada"
+                    },
+                    "500": {
+                        "description": "Error internal server",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/orders/{id}": {
+            "get": {
+                "summary": "Obtiene una orden por ID",
+                "description": "Retorna una orden por ID",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID de la orden a buscar",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Recupera una orden",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Order"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Category no encontrada"
+                    },
+                    "500": {
+                        "description": "Error internal server",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "summary": "Borrar una orden por ID",
+                "description": "Borra una orden de la base de datos",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID de la orden a buscar",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Orden eliminada"
+                    },
+                    "404": {
+                        "description": "Orden no encontrada"
+                    },
+                    "500": {
+                        "description": "Error internal server",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
+            "put": {
+                "summary": "Actualizar estado",
+                "description": "Actualizar el estado de la orden entre pending, sending y complete",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID de la orden a buscar",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "type": "object",
+                                "properties": {
+                                    "state": {
+                                        "type": "integer",
+                                        "items": {
+                                            "type": "integer"
+                                        }
+                                    }
+                                }                                
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Product response",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "string",
+                                    "example": "pending | sending | completed"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Error internal server",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/orders/get/totalsales": {
+            "get": {
+                "summary": "Obtiene la suma de las ventas",
+                "description": "Retorna el valor de venta de todas las ordenes almacenadas",
+                "responses": {
+                    "200": {
+                        "description": "Devuelve en valor numerico de todas las ventas",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "object",
+                                    "properties": {
+                                        "totalSales": {
+                                            "type": "integer",
+                                            "example": "126000"
+                                        }
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "La orden de ventas no puede se generada"
+                    },
+                    "500": {
+                        "description": "Error internal server",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/orders/get/count": {
+            "get": {
+                "summary": "Obtiene el total de todas las ordenes",
+                "description": "Retorna el valor de toda las ordenes almacenadas de la base de datos",
+                "responses": {
+                    "200": {
+                        "description": "Devuelve en valor numerico del total de ordenes",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "integer",
+                                    "example": "10"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No hay ordenes almacenadas"
+                    },
+                    "500": {
+                        "description": "Error internal server",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/orders/get/userorders/{userid}": {
+            "get": {
+                "summary": "Obtener los pedidos de un usuario",
+                "description": "Retorna todas las ordenes realizadas por un usuario",
+                "parameters": [
+                    {
+                        "name": "userid",
+                        "in": "path",
+                        "description": "ID del usuario a buscar",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Recupera los pedidos del usuario",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Order"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No se encontraron pedidos realizados por el usuario"
                     },
                     "500": {
                         "description": "Error internal server",
@@ -961,66 +1243,79 @@
                 "type": "object",
                 "properties": {
                     "orderItems": {
-                        "type": "object",
-                        "$ref": ""
+                        "type": "array",
+                        "items": {
+                            "type": "object",
+                            "properties": {
+                                "quantity": {
+                                    "type": "integer"
+                                },
+                                "product": {
+                                    "type": "string",
+                                    "format": "uuid",
+                                    "example": "65ef9cc5e285ef6d1c74eb6f"
+                                }
+                            } 
+                        }
                     },
                     "shippingAddress1": {
                         "type": "string",
                         "nullable": false,
-                        "description": "",
-                        "example": ""
+                        "description": "Dirección principal de usuario",
+                        "example": "Kra 9 #13A"
                     },
                     "shippingAddress2": {
                         "type": "string",
                         "nullable": false,
-                        "description": "",
-                        "example": ""
+                        "description": "Dirección alternativa de usuario",
+                        "example": "El amaga"
                     },
                     "city": {
                         "type": "string",
                         "nullable": false,
-                        "description": "",
-                        "example": ""
+                        "description": "Ciudad de residencia",
+                        "example": "Bogota"
                     },
                     "zip": {
                         "type": "string",
                         "nullable": false,
-                        "description": "",
-                        "example": ""
+                        "description": "Zip de la localidad",
+                        "example": "190234"
                     },
                     "country": {
                         "type": "string",
                         "nullable": false,
-                        "description": "",
-                        "example": ""
+                        "description": "Pais de residencia",
+                        "example": "Colombia"
                     },
                     "phone": {
                         "type": "string",
                         "nullable": false,
-                        "description": "",
-                        "example": ""
+                        "description": "Número de teléfono",
+                        "example": "+573023454567"
                     },
                     "status": {
                         "type": "string",
-                        "nullable": false,
-                        "description": "",
-                        "example": ""
+                        "default": "pending",
+                        "description": "Por defecto es pending al realizar la transacción",
+                        "example": "pending"
                     },
                     "totalPrice": {
                         "type": "integer",
-                        "description": "",
-                        "example": ""
+                        "description": "Devuelve en valor numerico el total de productos ordenados",
+                        "example": "Se genera de manera automática"
                     },
                     "user": {
                         "type": "string",
+                        "format": "uuid",
                         "nullable": false,
-                        "description": "",
-                        "example": ""
+                        "description": "Usuario que realizo la compra",
+                        "example": "65ef9cc5e285ef6d1c74eb6f"
                     },
                     "dateOrdered": {
                         "type": "date",
-                        "description": "",
-                        "example": ""
+                        "description": "Fecha de registro de la orden / automático",
+                        "example": " se genera de manera automática"
                     }
                 }
             },
@@ -1100,18 +1395,6 @@
                     },
                     "success": {
                         "type": "boolean"
-                    }
-                }
-            },
-            "Images": {
-                "type": "array",
-                "properties": {
-                    "images": {
-                        "type": "array",
-                        "items": {
-                            "type": "string",
-                            "format": "binary"
-                        }
                     }
                 }
             }
